--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,20 @@ body {
 h1 {
   font-size: 3.5em;
 }
+
 h2 {
   font-size: 2em;
 }
+
 h3 {
   font-size: 1.7em;
   font-weight: 550;
 }
+
 p {
   font-size: 1.25em;
 }
+
 button {
   font-size: 2em;
   font-weight: bold;
@@ -30,13 +34,15 @@ button {
   color: white;
   background-color: #f02518;
 }
-button:hover {
+button :hover {
   background-color: #b41e14;
 }
+
 .container {
   max-width: 1300px;
   margin: auto;
 }
+
 header {
   background-color: #f02518;
 }
@@ -67,6 +73,7 @@ header a {
 header a:hover {
   color: rgb(177, 177, 177);
 }
+
 #hero {
   display: flex;
   align-items: center;
@@ -76,30 +83,32 @@ header a:hover {
   height: 90vh;
   color: white;
   padding: 0px 25px;
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url("../imgs/fondo-hero.jpg");
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../imgs/fondo-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 }
+
 .color-acento {
   color: #b41e14;
 }
+
 #hero h1 {
   color: white;
 }
+
 #main-nosotros {
   height: 55vh;
-  padding: 0px 25px;
+  padding: 0px 15px;
   margin: 0;
 }
 #main-nosotros h1 {
   text-align: center;
 }
+#main-nosotros .imagen-nosotros {
+  display: none;
+}
+
 #main-productos {
   background-color: rgb(245, 245, 245);
   text-align: center;
@@ -133,6 +142,7 @@ header a:hover {
   color: rgb(0, 0, 0);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
+
 #main-promos {
   background-color: rgb(245, 245, 245);
   text-align: center;
@@ -150,9 +160,6 @@ header a:hover {
   text-align: center;
   margin-top: 0;
 }
-/*#main-promos p {
-  padding-top: 90px;
-}*/
 #main-promos button {
   font-size: 1em;
   border-radius: 8px;
@@ -166,6 +173,7 @@ header a:hover {
   color: rgb(0, 0, 0);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
+
 form {
   /*max-width: 700px;*/
   margin: 50px 20px;
@@ -174,12 +182,14 @@ form {
   box-sizing: border-box;
   border-radius: 15px;
 }
+
 #formulario h2 {
   color: white;
   text-align: center;
   margin: 0;
   margin-bottom: 30px;
 }
+
 #formulario input,
 textarea {
   width: 100%;
@@ -189,11 +199,13 @@ textarea {
   font-size: 1em;
   border: none;
 }
+
 #formulario textarea {
   min-height: 100px;
   max-height: 200px;
   max-width: 100%;
 }
+
 #boton {
   font-size: 2em;
   font-weight: bold;
@@ -204,7 +216,7 @@ textarea {
   color: black;
   background-color: white;
 }
-#boton:hover {
+#boton :hover {
   background-color: rgb(211, 211, 211);
   cursor: pointer;
 }
@@ -223,6 +235,7 @@ footer .container {
   justify-content: center;
   align-items: flex-end;
 }
+
 .row {
   align-items: center;
   justify-content: center;
@@ -232,6 +245,9 @@ footer .container {
   header .container {
     flex-direction: row;
     justify-content: space-between;
+  }
+  header .logo {
+    padding: 25px 25px;
   }
   header nav {
     flex-direction: row;
@@ -247,39 +263,39 @@ footer .container {
     padding: 0px 25px;
     margin: 0;
   }
-  #hero p {
+  #hero .container p {
     width: 50%;
     max-width: 800px;
   }
-  #hero h1 {
+  #hero .container h1 {
     margin-bottom: 0;
   }
-  #hero button {
+  #hero .container button {
     font-size: 1.5em;
-  }
-  header .logo {
-    padding: 25px 25px;
   }
   #main-productos .card {
     width: 25%;
+    padding: 15px;
   }
   #main-productos p {
     display: block;
   }
-  #main-productos .card {
-    padding: 15px;
-  }
-  #main-promos .card {
-    width: 25%;
-  }
   #main-promos p {
     display: block;
+  }
+  footer {
+    margin-top: auto;
   }
   footer .container {
     justify-content: flex-end;
   }
+  #main-nosotros {
+    padding: 60px 30px;
+    min-height: 90vh;
+  }
   #main-nosotros .imagen-nosotros {
-    height: 500px;
-    width: 400px;
+    display: block;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
