--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,33 @@ button :hover {
   background-color: #b41e14;
 }
 
+.color-acento {
+  color: #b41e14;
+}
+
+.row {
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
   max-width: 1300px;
   margin: auto;
+}
+
+footer {
+  background-color: rgb(230, 230, 230);
+}
+footer p {
+  margin: 0;
+  padding: 12px;
+  color: rgb(100, 100, 100);
+}
+footer .container {
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 header {
@@ -57,12 +81,6 @@ header .container {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-header nav {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding-bottom: 10px;
 }
 header a {
   padding: 5px 12px;
@@ -89,24 +107,76 @@ header a:hover {
   background-position: center center;
 }
 
-.color-acento {
-  color: #b41e14;
-}
-
 #hero h1 {
   color: white;
 }
 
-#main-nosotros {
-  height: 55vh;
-  padding: 0px 15px;
+nav {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+form {
+  /*max-width: 700px;*/
+  margin: 50px 20px;
+  background-color: #b41f14;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  border-radius: 15px;
+}
+
+#formulario h2 {
+  color: white;
+  text-align: center;
   margin: 0;
+  margin-bottom: 30px;
+}
+
+#formulario input,
+textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 7px;
+  box-sizing: border-box;
+  font-size: 1em;
+  border: none;
+}
+
+#formulario textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
+}
+
+#boton {
+  font-size: 2em;
+  font-weight: bold;
+  padding: 10px 30px;
+  border-radius: 7px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  color: black;
+  background-color: white;
+}
+#boton :hover {
+  background-color: rgb(211, 211, 211);
+  cursor: pointer;
+}
+
+#main-nosotros {
+  margin: 0;
+  text-align: justify;
 }
 #main-nosotros h1 {
   text-align: center;
 }
 #main-nosotros .imagen-nosotros {
   display: none;
+}
+#main-nosotros .colontainer {
+  height: 80vh;
 }
 
 #main-productos {
@@ -174,73 +244,6 @@ header a:hover {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
-form {
-  /*max-width: 700px;*/
-  margin: 50px 20px;
-  background-color: #b41f14;
-  padding: 10px 20px;
-  box-sizing: border-box;
-  border-radius: 15px;
-}
-
-#formulario h2 {
-  color: white;
-  text-align: center;
-  margin: 0;
-  margin-bottom: 30px;
-}
-
-#formulario input,
-textarea {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 7px;
-  box-sizing: border-box;
-  font-size: 1em;
-  border: none;
-}
-
-#formulario textarea {
-  min-height: 100px;
-  max-height: 200px;
-  max-width: 100%;
-}
-
-#boton {
-  font-size: 2em;
-  font-weight: bold;
-  padding: 10px 30px;
-  border-radius: 7px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  color: black;
-  background-color: white;
-}
-#boton :hover {
-  background-color: rgb(211, 211, 211);
-  cursor: pointer;
-}
-
-footer {
-  background-color: rgb(230, 230, 230);
-}
-footer p {
-  margin: 0;
-  padding: 12px;
-  color: rgb(100, 100, 100);
-}
-footer .container {
-  height: 130px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-
-.row {
-  align-items: center;
-  justify-content: center;
-}
-
 @media (min-width: 720px) {
   header .container {
     flex-direction: row;
@@ -282,6 +285,9 @@ footer .container {
   }
   #main-promos p {
     display: block;
+  }
+  #formulario {
+    height: 80vh;
   }
   footer {
     margin-top: auto;
