--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,63 +1,5 @@
-@media (min-width: 720px) {
-  header {
-    .container {
-      flex-direction: row;
-      justify-content: space-between;
-    }
-    .logo {
-      padding: 25px 25px;
-    }
-    nav {
-      flex-direction: row;
-      padding-bottom: 0;
-      padding-right: 20px;
-    }
-  }
-  #hero .container {
-    display: flex;
-    align-items: baseline;
-    justify-content: left;
-    text-align: left;
-    flex-direction: column;
-    padding: 0px 25px;
-    margin: 0;
-    p {
-      width: 50%;
-      max-width: 800px;
-    }
-    h1 {
-      margin-bottom: 0;
-    }
-    button {
-      font-size: 1.5em;
-    }
-  }
-  #main-productos {
-    .card {
-      width: 25%;
-      padding: 15px;
-    }
-    p {
-      display: block;
-    }
-  }
-  #main-promos p {
-    display: block;
-  }
-  #formulario {
-    height: 80vh;
-  }
-  footer {
-    margin-top: auto;
-    .container {
-      justify-content: flex-end;
-    }
-  }
-  #main-nosotros {
-    padding: 60px 30px;
-    min-height: 90vh;
-    .imagen-nosotros {
-      display: block;
-    }
+@mixin mobile {
+  @media screen and (min-width: 768px) {
+    @content;
   }
 }
