--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ button :hover {
 footer {
   background-color: rgb(230, 230, 230);
 }
+@media (min-width: 720px) {
+  footer {
+    margin-top: auto;
+  }
+}
 footer p {
   margin: 0;
   padding: 12px;
@@ -65,6 +70,11 @@ footer .container {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+}
+@media (min-width: 720px) {
+  footer .container {
+    justify-content: flex-end;
+  }
 }
 
 header {
@@ -77,10 +87,24 @@ header .logo {
   color: white;
   font-size: 2em;
 }
+@media (min-width: 720px) {
+  header .logo {
+    padding: 25px 25px;
+  }
+  header .logo .logo {
+    padding: 25px 25px;
+  }
+}
 header .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+@media (min-width: 720px) {
+  header .container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 header a {
   padding: 5px 12px;
@@ -106,6 +130,27 @@ header a:hover {
   background-size: cover;
   background-position: center center;
 }
+@media (min-width: 720px) {
+  #hero .container {
+    display: flex;
+    align-items: baseline;
+    justify-content: left;
+    text-align: left;
+    flex-direction: column;
+    padding: 0px 25px;
+    margin: 0;
+  }
+  #hero .container p {
+    width: 50%;
+    max-width: 800px;
+  }
+  #hero .container h1 {
+    margin-bottom: 0;
+  }
+  #hero .container button {
+    font-size: 1.5em;
+  }
+}
 
 #hero h1 {
   color: white;
@@ -117,6 +162,13 @@ nav {
   text-align: center;
   padding-bottom: 10px;
 }
+@media (min-width: 720px) {
+  nav {
+    flex-direction: row;
+    padding-bottom: 0;
+    padding-right: 20px;
+  }
+}
 
 form {
   /*max-width: 700px;*/
@@ -125,6 +177,12 @@ form {
   padding: 10px 20px;
   box-sizing: border-box;
   border-radius: 15px;
+}
+
+@media (min-width: 720px) {
+  #formulario {
+    height: 80vh;
+  }
 }
 
 #formulario h2 {
@@ -165,15 +223,33 @@ textarea {
   cursor: pointer;
 }
 
+h1 {
+  padding-top: 15px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
 #main-nosotros {
   margin: 0;
   text-align: justify;
+}
+@media (min-width: 720px) {
+  #main-nosotros {
+    padding: 60px 30px;
+    min-height: 90vh;
+  }
 }
 #main-nosotros h1 {
   text-align: center;
 }
 #main-nosotros .imagen-nosotros {
   display: none;
+}
+@media (min-width: 720px) {
+  #main-nosotros .imagen-nosotros {
+    display: block;
+  }
 }
 #main-nosotros .colontainer {
   height: 80vh;
@@ -182,6 +258,15 @@ textarea {
 #main-productos {
   background-color: rgb(245, 245, 245);
   text-align: center;
+}
+@media (min-width: 720px) {
+  #main-productos .card {
+    width: 25%;
+    padding: 15px;
+  }
+  #main-productos p {
+    display: block;
+  }
 }
 #main-productos .container {
   padding: 50px 0px;
@@ -245,61 +330,7 @@ textarea {
 }
 
 @media (min-width: 720px) {
-  header .container {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  header .logo {
-    padding: 25px 25px;
-  }
-  header nav {
-    flex-direction: row;
-    padding-bottom: 0;
-    padding-right: 20px;
-  }
-  #hero .container {
-    display: flex;
-    align-items: baseline;
-    justify-content: left;
-    text-align: left;
-    flex-direction: column;
-    padding: 0px 25px;
-    margin: 0;
-  }
-  #hero .container p {
-    width: 50%;
-    max-width: 800px;
-  }
-  #hero .container h1 {
-    margin-bottom: 0;
-  }
-  #hero .container button {
-    font-size: 1.5em;
-  }
-  #main-productos .card {
-    width: 25%;
-    padding: 15px;
-  }
-  #main-productos p {
-    display: block;
-  }
   #main-promos p {
-    display: block;
-  }
-  #formulario {
-    height: 80vh;
-  }
-  footer {
-    margin-top: auto;
-  }
-  footer .container {
-    justify-content: flex-end;
-  }
-  #main-nosotros {
-    padding: 60px 30px;
-    min-height: 90vh;
-  }
-  #main-nosotros .imagen-nosotros {
     display: block;
   }
 }
