--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,4 +1,25 @@
 #hero {
+  .container {
+    @media (min-width: 720px) {
+      display: flex;
+      align-items: baseline;
+      justify-content: left;
+      text-align: left;
+      flex-direction: column;
+      padding: 0px 25px;
+      margin: 0;
+      p {
+        width: 50%;
+        max-width: 800px;
+      }
+      h1 {
+        margin-bottom: 0;
+      }
+      button {
+        font-size: 1.5em;
+      }
+    }
+  }
   display: flex;
   align-items: center;
   justify-content: center;
