--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,4 +1,9 @@
 nav {
+  @media (min-width: 720px) {
+    flex-direction: row;
+    padding-bottom: 0;
+    padding-right: 20px;
+  }
   display: flex;
   flex-direction: column;
   text-align: center;
