--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,10 +1,17 @@
 #main-nosotros {
+  @media (min-width: 720px) {
+    padding: 60px 30px;
+    min-height: 90vh;
+  }
   margin: 0;
   text-align: justify;
   h1 {
     text-align: center;
   }
   .imagen-nosotros {
+    @media (min-width: 720px) {
+      display: block;
+    }
     display: none;
   }
   .colontainer {
