--- a/scss/pages/_promos.scss
+++ b/scss/pages/_promos.scss
@@ -28,3 +28,8 @@
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   }
 }
+#main-promos p {
+  @media (min-width: 720px) {
+    display: block;
+  }
+}
